2006-05-22  Dan Winship  <danw@novell.com>

	* plugins/switcher.c (switchHandleEvent): Check init_all binding
	before init, so you can bind "<Alt>" to init_all and so end up
	with "<Alt>Tab" being init_all rather than init (but with no way
	to get "init"...). bnc 173376

2006-05-21  David Reveman  <davidr@novell.com>

	* src/display.c (addDisplay): Select for button events on root windows.

	* configure.ac: Bump version to 0.0.11.

	* gnome/window-decorator/gnome-window-decorator.c: Fix shadow
	performance by separating the convolution filter into one vertical and
	one horizontal pass.

	* src/window.c (mapWindow): Give sync request on map another try, it
	seems to be working now.

	* src/window.c (addWindow): Allow XGetWindowAttributes to fail.
	(bnc 173416).

	* src/window.c (addWindow): Initialize managed to false. Set managed
	to true if widows is viewable.

	* src/event.c (handleEvent): Set managed to false when window
	transitions to withdrawn state.
	(handleEvent): Set managed to true when we get MapRequest.
	(handleEvent): Constrain configure request if window is managed.

	* include/compiz.h: Add "managed" variable that is true while
	windows is managed.

2006-05-19  David Reveman  <davidr@novell.com>

	* plugins/switcher.c (ICON_SIZE): Allow use of larger window icons.

2006-05-18  Dan Winship  <danw@novell.com>

	* plugins/wobbly.c (WOBBLY_FOCUS_DEFAULT): Set this to "None" to
	match wobblyInitScreen() so that it actually works right.

	* plugins/compiz.schemas.in.in: regen

2006-05-18  Dan Winship  <danw@novell.com>

	* src/session.c (saveYourselfCallback): if we have a
	RestartCommand registered with the session manager, update the
	--sm-client-id in it to match the id we were assigned. bnc 176746

	* src/main.c (main, usage): remove unused --sm-save-file arg and
	fix documentation of --sm-client-id.

2006-05-17  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen (Overlay Icon).
