@@ -1,5 +1,8 @@
 2006-05-22  Dan Winship  <danw@novell.com>
 
+	* src/window.c (moveResizeWindow): deal with both vertical and
+	horizontal struts; but not when moving a dock window
+
 	* plugins/switcher.c (switchHandleEvent): Check init_all binding
 	before init, so you can bind "<Alt>" to init_all and so end up
 	with "<Alt>Tab" being init_all rather than init (but with no way
